# product_parser_test_case

./: .flake8  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.tests.yaml  docker-compose.yaml
src/: __init__.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py  models.py  router.py  schemas.py  service.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 12-04-2023_create_product_color_models.py
tests/: conftest.py  test_router.py  test_utils.py
tests/fixtures/: routers.py  utils.py
