[tool.poetry]
name = "product-parser-test-case"
version = "0.1.0"
description = ""
authors = ["simatheone <samone07@mail.ru>"]
readme = "README.md"
packages = [{include = "product_parser_test_case"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
uvicorn = "^0.21.1"
alembic = "^1.10.3"
requests = "^2.28.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
